Allow native access in PrefabErrorReportingTest for Java 25
PrefabErrorReportingTest runs the Prefab CLI in a separate JVM process.
Under Java 25, JNI library loading triggers warnings about restricted
methods being called. Since the test asserts that stderr contains no
unrecognized errors, this warning causes the test to fail.

This change adds `--enable-native-access=ALL-UNNAMED` to the JVM
arguments of the spawned Prefab process, matching the behavior of the
production execution path.

Bug: 469841005
Test: `bazel test --config=jbr25  //tools/base/build-system/integration-test/native:PrefabErrorReportingTest`
Change-Id: I519d59bdf0366c6649aa277dece8973d0fee54fb